# robot_nav

./: .env  .gitignore  Readme.md  build.sh  docker-compose.yml
docker/: Dockerfile.cloud_simple  Dockerfile.robot_simulator  Dockerfile.slam
docker-compose/: core.yml  gazebo.yml  slam.yml
docker_files/: Dockerfile.robot_simulator
envs/: gazebo
robot_simulator/: package.xml
robot_simulator/launch/: turtle.launch
ros_modules/config_node/: CMakeLists.txt  package.xml
ros_modules/config_node/cmake/: ceff_simulatorConfig.cmake
ros_modules/config_node/configuration_files/: lidar_2d.lua  lidar_2d_localize.lua  pose_graph.lua  simple_vis.rviz  vis.rviz
ros_modules/config_node/launch/: lidar_2d_localization.launch  lidar_2d_mapping.launch  roscore.launch  vis_slam.launch
ros_modules/robot_simulator/: CMakeLists.txt
ros_modules/robot_simulator/launch/: empty_world.launch  turtle.launch
ros_modules/robot_simulator/urdf/: simple.urdf.xacro  turtlebot3_waffle.gazebo.xacro  turtlebot3_waffle.urdf.xacro
ros_modules/robot_simulator/worlds/: factory.world
tests/: readme.md  run_test.py
tests/mapping/: docker-compose-files.yml  events.py  sim_playbag.env
