<?xml version="1.0"?>
<package>
  <name>robot_simulator</name>
  <version>0.1.0</version>
  <description>
    Gazebo simulation package 
  </description>
  <license>-</license>
  <author email="me@mojovski.com">test</author>
  <maintainer email="me@mojovski.com">Test Tests</maintainer>
  <url type="website">https://github.com/mojovski</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>gazebo_ros</run_depend>


  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
