<?xml version="1.0"?>
<package>
  <name>config_node</name>
  <version>0.1.0</version>
  <description>
    Robot nav testing module
  </description>
  <license>-</license>
  <author email="mojo@mojo.com">Eugen Funk</author>
  <maintainer email="info@mojo.com">mojo.com</maintainer>
  <url type="website">http://mojo.com</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>

  <!--<run_depend>cartographer_turtlebot</run_depend>-->

  <export>
    <gazebo_ros plugin_path="${prefix}/lib"/>
  </export>
</package>
